src/main/metadata-excluded/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>本人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>家人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>朋友</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>同事</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>关系客户</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coupon_Dealer__c</fullName>
        <label>Coupon Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Number__c</fullName>
        <label>Coupon Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Create_SSI_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create SSI Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driving_concern__c</fullName>
        <label>Driving concern</label>
        <picklist>
            <picklistValues>
                <fullName>车辆操控</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对于复杂的交通状况处理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>开车受到干扰/分心</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driving_experience__c</fullName>
        <label>Driving experience</label>
        <picklist>
            <picklistValues>
                <fullName>刚拿驾照</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>拿驾照后一直未开车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对路况不熟悉</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对车不熟悉</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>交通事故阴影</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_vehicle_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected vehicle Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Event_End_Date__c</fullName>
        <label>Last Event End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeftHours__c</fullName>
        <label>Left Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBDA_Vehicle_Model__c</fullName>
        <label>MBDA Vehicle Model</label>
        <picklist>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Cancellation_Reason__c</fullName>
        <label>Order Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>个人原因</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>教官原因</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其他原因</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <picklist>
            <picklistValues>
                <fullName>教官</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>呼叫中心</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>经销商</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>员工推荐</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Source__c</fullName>
        <label>Order Sub Source</label>
        <picklist>
            <controllingField>Order_Source__c</controllingField>
            <picklistValues>
                <fullName>庄梓</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>李欣</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>王征征</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>王梓</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>王小建</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>崔鑫</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>刘东升</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>史文君</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>赵焱</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>杨重雪</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>陈新宇</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_refund_Reason__c</fullName>
        <label>Order refund Reason</label>
        <picklist>
            <picklistValues>
                <fullName>个人原因</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>教官原因</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其他原因</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <label>Payee</label>
        <picklist>
            <picklistValues>
                <fullName>TDB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_date__c</fullName>
        <label>Payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <picklist>
            <picklistValues>
                <fullName>POS机</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>汇款</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>现金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>代金券</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <formula>Pricebook2.Name</formula>
        <label>Price Book</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_employee_No__c</fullName>
        <label>Referral employee No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Road_situation_knowing__c</fullName>
        <label>Road situation knowing</label>
        <picklist>
            <picklistValues>
                <fullName>熟悉</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>比较熟悉</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不熟悉</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>ADT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>动态交车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>代步车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>深度试乘试驾</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill_improvement__c</fullName>
        <label>Skill improvement</label>
        <picklist>
            <picklistValues>
                <fullName>停车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>复杂路况</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高速公路</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>山道驾驶</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>特殊天气</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夜间驾驶</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>OrderItem.Quantity</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Used_hours__c</fullName>
        <label>Used hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>MBDA_Order</fullName>
        <active>true</active>
        <label>MBDA Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Need_Coupon_for_coupon_payment_method</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Payment_type__c, &quot;代金券&quot;) &amp;&amp;  ISBLANK(Coupon_Number__c)</errorConditionFormula>
        <errorDisplayField>Coupon_Number__c</errorDisplayField>
        <errorMessage>You need fill in coupon name when payment type is &quot;代金券&quot;</errorMessage>
    </validationRules>
</CustomObject>